CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(qmap_wrapper VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_AUTOUIC ON)

IF(CMAKE_VERSION VERSION_LESS "3.7.0")
    SET(CMAKE_INCLUDE_CURRENT_DIR ON)
ENDIF()

FIND_PACKAGE(Qt5Test REQUIRED)

ADD_EXECUTABLE(qmap_wrapper
  main.cpp
  qmap_wrapper.h
  test.h
  test.cpp
)

TARGET_LINK_LIBRARIES(qmap_wrapper Qt5::Test)
